Modularize Tango billing API
